--- a/index.html
+++ b/index.html
@@ -2,229 +2,154 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    @font-face {
-      font-family: 'Snap ITC';
-      src: local('Snap ITC');
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: 'Bahnschrift', sans-serif;
-      background: url('https://wallpapercave.com/wp/Anime.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f5f5f5;
     }
 
     header {
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      animation: fadeDown 1s ease;
-    }
-
-    @keyframes fadeDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+      background-color: #111;
+      padding: 10px 20px;
+      color: white;
     }
 
     .logo {
-      font-size: 32px;
-      font-family: 'Snap ITC';
-      font-weight: 700;
-      color: #e63946;
-      text-shadow: 2px 2px 0 #000;
+      font-size: 24px;
+      font-weight: bold;
     }
 
-    .nav-right {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .nav-links a {
+    .nav-right a {
+      margin-left: 20px;
       color: white;
       text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    .nav-links a:hover {
-      color: #ff6b6b;
     }
 
     .search-filter {
       text-align: center;
-      margin: 20px auto 5px;
+      padding: 15px;
     }
 
-    .search-filter input[type="text"] {
+    .search-filter input {
+      width: 60%;
       padding: 8px;
-      width: 300px;
-      border-radius: 5px;
-      border: none;
     }
 
     .category-bar {
-      text-align: center;
-      margin: 10px 0;
-    }
-
-    .category-bar span {
-      color: black;
-      background: white;
-      padding: 5px 15px;
-      margin: 0 5px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
+      display: flex;
+      justify-content: space-around;
+      background-color: #eee;
+      padding: 10px;
     }
 
     .hero {
       text-align: center;
-      padding: 80px 20px 40px;
-      background: rgba(0,0,0,0.5);
-      animation: fadeUp 1s ease;
-    }
-
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .hero h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-
-    .hero p {
-      font-size: 20px;
+      padding: 40px 20px;
+      background: linear-gradient(to right, #ff5757, #ff9d2f);
+      color: white;
     }
 
     .products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 30px;
-      padding: 40px;
-      background: rgba(0,0,0,0.7);
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      padding: 20px;
     }
 
     .product {
-      background: #fff;
-      color: #000;
+      background-color: white;
       border-radius: 10px;
       overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
     }
 
     .product:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px #000;
+      transform: scale(1.03);
     }
 
     .product img {
       width: 100%;
-      height: 250px;
+      height: 200px;
       object-fit: cover;
     }
 
     .product-info {
       padding: 15px;
-      text-align: center;
-    }
-
-    .product-info h3 {
-      margin-bottom: 10px;
     }
 
     .buy-btn {
-      background-color: #e63946;
-      border: none;
+      background-color: #ff5757;
       color: white;
-      padding: 10px 20px;
+      border: none;
+      padding: 8px 12px;
       cursor: pointer;
       border-radius: 5px;
-      transition: background 0.3s;
+      margin-top: 10px;
     }
 
-    .buy-btn:hover {
-      background-color: #d90429;
+    #about-content, #loginPopup, #cartPopup, #productDetail {
+      display: none;
+      padding: 20px;
+      background-color: white;
+      margin: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
     }
 
     footer {
-      background: rgba(0, 0, 0, 0.8);
-      padding: 20px;
       text-align: center;
-      color: white;
-    }
-
-    #about-content {
       padding: 20px;
-      display: none;
-      background: rgba(255, 255, 255, 0.9);
-      color: black;
-    }
-
-    #loginPopup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      color: black;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #000;
-    }
-
-    #loginPopup input {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-    }
-
-    #loginPopup button {
-      background: #e63946;
+      background-color: #111;
       color: white;
-      border: none;
-      padding: 10px 15px;
-      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .nav-right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+      }
+
+      .search-filter input {
+        width: 90%;
+      }
+
+      .products {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
     <div class="logo">FA-Tshirt</div>
     <div class="nav-right">
-      <nav class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about" onclick="showAbout()">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <a href="#" onclick="showLogin()" style="color:white">Login</a>
-      <a href="#" style="color:white">Cart</a>
+      <a href="#" onclick="showSection('home')">Home</a>
+      <a href="#" onclick="showSection('products')">Products</a>
+      <a href="#" onclick="showSection('about')">About</a>
+      <a href="#" onclick="showLogin()">Login</a>
+      <a href="#" onclick="showCart()">Cart</a>
     </div>
   </header>
 
   <div class="search-filter">
-    <input type="text" placeholder="Search for t-shirts...">
+    <input type="text" placeholder="Search for t-shirts..." />
   </div>
 
   <div class="category-bar">
@@ -240,73 +165,117 @@
 
   <section id="about-content">
     <h2>Our Story</h2>
-    <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
+    <p>FA-Tshirt is not just a brand, it's a dream built with quality and affordability for everyone in India.</p>
   </section>
 
   <section class="products" id="products">
-    <!-- Repeat product blocks to ensure scrolling -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+    <div class="product" onclick="showProductDetail(1)">
+      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" />
       <div class="product-info">
         <h3>Black Round Neck</h3>
         <p>₹299</p>
-        <button class="buy-btn">Add to Cart</button>
+        <button class="buy-btn">View</button>
       </div>
     </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+
+    <div class="product" onclick="showProductDetail(2)">
+      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" />
       <div class="product-info">
         <h3>White Graphic Tee</h3>
         <p>₹349</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
-      <div class="product-info">
-        <h3>Red Street Style</h3>
-        <p>₹399</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <!-- More product blocks -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1536148935331-408321065b18?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
-      <div class="product-info">
-        <h3>Classic Blue Tee</h3>
-        <p>₹289</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1542062703-5a5d2aa0f71b?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
-      <div class="product-info">
-        <h3>Urban White</h3>
-        <p>₹320</p>
-        <button class="buy-btn">Add to Cart</button>
+        <button class="buy-btn">View</button>
       </div>
     </div>
   </section>
 
-  <footer>
-    &copy; 2025 FA-Tshirt. All rights reserved.
-  </footer>
+  <!-- Product Detail Section -->
+  <section id="productDetail">
+    <h2 id="pName"></h2>
+    <img id="pImage" style="max-width: 300px;" />
+    <p id="pPrice"></p>
+    <button class="buy-btn" onclick="addToCart()">Add to Cart</button>
+    <br/><br/>
+    <button onclick="showSection('products')">Back to Products</button>
+  </section>
 
-  <div id="loginPopup">
+  <!-- Login Popup -->
+  <section id="loginPopup">
     <h2>Login</h2>
-    <input type="text" placeholder="Username">
-    <input type="password" placeholder="Password">
-    <button onclick="alert('Login Successful')">Login</button>
-  </div>
+    <input type="text" placeholder="Username" /><br/><br/>
+    <input type="password" placeholder="Password" /><br/><br/>
+    <button onclick="alert('Login Successful'); hideAll()">Login</button>
+  </section>
+
+  <!-- Cart Popup -->
+  <section id="cartPopup">
+    <h2>Your Cart</h2>
+    <p id="cartContent">No items in cart.</p>
+    <button onclick="hideAll()">Close</button>
+  </section>
+
+  <footer>&copy; 2025 FA-Tshirt. All rights reserved.</footer>
 
   <script>
-    function showAbout() {
-      document.getElementById('about-content').style.display = 'block';
-      window.scrollTo(0, document.getElementById('about-content').offsetTop);
+    const products = {
+      1: {
+        name: "Black Round Neck",
+        price: "₹299",
+        image: "https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80"
+      },
+      2: {
+        name: "White Graphic Tee",
+        price: "₹349",
+        image: "https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80"
+      }
+    };
+
+    let cart = [];
+
+    function showSection(id) {
+      hideAll();
+      if (id === 'home') document.getElementById('home').style.display = 'block';
+      else if (id === 'products') document.getElementById('products').style.display = 'grid';
+      else if (id === 'about') document.getElementById('about-content').style.display = 'block';
     }
+
     function showLogin() {
+      hideAll();
       document.getElementById('loginPopup').style.display = 'block';
     }
+
+    function showCart() {
+      hideAll();
+      document.getElementById('cartPopup').style.display = 'block';
+      let cartText = cart.length === 0 ? 'No items in cart.' : cart.join(', ');
+      document.getElementById('cartContent').innerText = cartText;
+    }
+
+    function showProductDetail(id) {
+      hideAll();
+      const p = products[id];
+      document.getElementById('pName').innerText = p.name;
+      document.getElementById('pPrice').innerText = p.price;
+      document.getElementById('pImage').src = p.image;
+      document.getElementById('productDetail').style.display = 'block';
+      cart.currentProduct = p.name;
+    }
+
+    function addToCart() {
+      if (cart.currentProduct) cart.push(cart.currentProduct);
+      alert("Added to cart!");
+    }
+
+    function hideAll() {
+      document.getElementById('home').style.display = 'none';
+      document.getElementById('products').style.display = 'none';
+      document.getElementById('about-content').style.display = 'none';
+      document.getElementById('loginPopup').style.display = 'none';
+      document.getElementById('cartPopup').style.display = 'none';
+      document.getElementById('productDetail').style.display = 'none';
+    }
+
+    // By default show home
+    showSection('home');
   </script>
 </body>
 </html>
