--- a/index.html
+++ b/index.html
@@ -6,136 +6,112 @@
     <title>FA-Tshirt</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Existing styles remain untouched */
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-image: url('https://www.dropbox.com/scl/fi/6scs34cfiffalea8m5r6k/download.jfif?rlkey=9me88jua5fx4vxiizskj1lk3e&st=js2tc74z&dl=1');
+            background-image: url('download.jfif');
             background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
-
-        #loginPopup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.3);
-            z-index: 999;
+        .transparent-box {
+            background-color: rgba(255, 255, 255, 0.8);
         }
-
-        #loginPopup input {
-            display: block;
-            margin-bottom: 10px;
-            padding: 8px;
-            width: 100%;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        header, .category-bar, .product, .about, footer, .login-popup {
+            background-color: rgba(255, 255, 255, 0.8);
         }
-
-        #loginPopup button {
-            padding: 8px 16px;
-            background-color: #000;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #userDisplay {
-            color: white;
-            font-weight: bold;
+        #user-info {
             margin-left: 10px;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-
-    <!-- Header / Navbar -->
     <header>
-        <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px; background-color: rgba(0, 0, 0, 0.6);">
-            <div>
-                <img src="logo.png" alt="FA-Tshirt" style="height: 40px;">
-                <div style="color: white; font-size: 12px;">FA-Tshirt</div>
-            </div>
-            <div>
-                <button id="loginBtn">Login</button>
-                <span id="userDisplay"></span>
-            </div>
+        <div class="logo">
+            <img src="logo.png" alt="FA-Tshirt Logo">
+            <span>FA-Tshirt</span>
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search...">
+        </div>
+        <div class="header-buttons">
+            <button onclick="toggleLoginPopup()">Login</button>
+            <span id="user-info"></span>
+            <button>Cart</button>
         </div>
     </header>
+    <div class="category-bar">
+        <button>Men</button>
+        <button>Women</button>
+        <button>New Arrivals</button>
+        <button>Best Sellers</button>
+    </div>
+    <div class="product-listing">
+        <div class="product">
+            <img src="tshirt1.png" alt="T-shirt 1">
+            <h3>Classic Black Tee</h3>
+            <p>₹299</p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="tshirt2.png" alt="T-shirt 2">
+            <h3>Red Graphic Tee</h3>
+            <p>₹299</p>
+            <button>Add to Cart</button>
+        </div>
+        <!-- More products -->
+    </div>
+    <div class="about">
+        <h2>About FA-Tshirt</h2>
+        <p>FA-Tshirt brings you high-quality, stylish, and affordable t-shirts made for everyone. We focus on comfort, durability, and bold designs that stand out.</p>
+    </div>
+    <footer>
+        <p>&copy; 2025 FA-Tshirt. All rights reserved.</p>
+    </footer>
 
     <!-- Login Popup -->
-    <div id="loginPopup">
-        <span id="closePopup" style="float: right; cursor: pointer;">&times;</span>
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
+    <div class="login-popup" id="loginPopup" style="display:none;">
+        <div class="popup-content">
+            <span onclick="toggleLoginPopup()" style="float:right;cursor:pointer;">&times;</span>
+            <h2>Login</h2>
+            <input type="text" id="username" placeholder="Enter your name">
+            <button onclick="login()">Login</button>
+        </div>
     </div>
 
-    <!-- Main Content -->
-    <main>
-        <!-- Your main content here -->
-    </main>
-
     <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const loginBtn = document.getElementById("loginBtn");
-        const loginPopup = document.getElementById("loginPopup");
-        const closePopup = document.getElementById("closePopup");
-        const loginForm = document.getElementById("loginForm");
-        const userDisplay = document.getElementById("userDisplay");
-
-        const user = localStorage.getItem("user");
-        if (user) {
-            loginBtn.style.display = "none";
-            userDisplay.innerHTML = `Welcome, <strong>${user}</strong> <button id="logoutBtn">Logout</button>`;
-            addLogoutListener();
+        function toggleLoginPopup() {
+            const popup = document.getElementById('loginPopup');
+            popup.style.display = popup.style.display === 'none' ? 'block' : 'none';
         }
 
-        loginBtn.addEventListener("click", function () {
-            loginPopup.style.display = "block";
-        });
+        function login() {
+            const username = document.getElementById('username').value.trim();
+            if (username) {
+                localStorage.setItem('fa_user', username);
+                showUserInfo();
+                toggleLoginPopup();
+            }
+        }
 
-        closePopup.addEventListener("click", function () {
-            loginPopup.style.display = "none";
-        });
-
-        loginForm.addEventListener("submit", function (e) {
-            e.preventDefault();
-            const username = document.getElementById("username").value.trim();
-            const password = document.getElementById("password").value.trim();
-
-            if (username && password) {
-                localStorage.setItem("user", username);
-                loginPopup.style.display = "none";
-                loginBtn.style.display = "none";
-                userDisplay.innerHTML = `Welcome, <strong>${username}</strong> <button id="logoutBtn">Logout</button>`;
-                addLogoutListener();
+        function showUserInfo() {
+            const user = localStorage.getItem('fa_user');
+            const userInfo = document.getElementById('user-info');
+            if (user) {
+                userInfo.innerHTML = `Welcome, ${user} <button onclick="logout()">Logout</button>`;
             } else {
-                alert("Please enter both username and password.");
-            }
-        });
-
-        function addLogoutListener() {
-            const logoutBtn = document.getElementById("logoutBtn");
-            if (logoutBtn) {
-                logoutBtn.addEventListener("click", function () {
-                    localStorage.removeItem("user");
-                    location.reload();
-                });
+                userInfo.innerHTML = '';
             }
         }
-    });
-    </script>
 
+        function logout() {
+            localStorage.removeItem('fa_user');
+            showUserInfo();
+        }
+
+        window.onload = function() {
+            showUserInfo();
+        }
+    </script>
 </body>
 </html>
